# dsp_factory

./: LICENSE  README.md  install.sh  platform_configuration.sh  setEnv.sh
C++Tutorial/: CMakeLists.txt
C++Tutorial/src/: ConstKeyword.cpp  Inheritance.cpp  InitialMembers.cpp  MultipleReturns.cpp  NewAndMalloc.cpp  Operator_Struct.cpp  SimpleClass.cpp  UniqueShareWeak.cpp  emptyProj.cpp  main.cpp
Drivers/UVC_CAM/uvc_cam_sdk/: a.out  includes.h  uvcTest.c  uvc_cam_sdk.c  uvc_cam_sdk.h
Examples/DIP/Ex1_gammaCorrection/: Makefile  demo.cpp  gammaCorrection
Examples/EigenDemo/Android/: workthrough.sh
Examples/EigenDemo/Codes/: EigenDemo.cpp
Examples/Tutorial1/Android/: workthrough.sh
Examples/Tutorial1/BBBlack/: Makefile  dspFactoryT1_NeonLDTest
Examples/Tutorial1/Codes/: NeonLoadStore.c
Examples/Tutorial1_MEMCPY/Android/: workthrough.sh
Examples/Tutorial1_MEMCPY/BBBlack/: Makefile  dspFactoryT1_NeonLDTest
Examples/Tutorial1_MEMCPY/Codes/: NeonLoadStore.c
Examples/Tutorial2/Codes/: NeonLInearTransform.c
OpenGL/001_openglDemo/: glHelloWorld  glHelloWorld.c
OpenGL/002_drawRectangle/: Makefile  glDrawRectangle  glDrawRectangle.c
OpenGL/003_showPixels/: Makefile  glShowPixels  glShowPixels.c
OpenGL/004_showUvcStream/: Makefile  glShowPixels  glShowPixels.c
OpenGL/openglDemo/: Makefile
Scripts/NDK_SCRIPTS/: build.sh  clean.sh
doc/ppt/: OpenglArmLinuxGuide.odp
dspFactorySDK/formatSDK/: buildSDK.bat  buildSDK.sh  cleanSDK.sh
dspFactorySDK/glSDK/: buildSDK.bat  buildSDK.sh
libFormat/bmp/: a.out  bmp.c  bmp.cpp  bmp.h  bmpTest.c
(+35 files in other folders)
